// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if accessibility properties are set 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Remove:",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "children": [
            {
              "name": "Some label",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "name": "Some Tag",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Some aria-label",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree with label 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Remove:",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "children": [
            {
              "name": "Some label",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "name": "Some Tag",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Remove: Some label Some Tag",
  "role": "button",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Remove:",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "children": [
            {
              "name": "Some Tag",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Remove: Some Tag",
  "role": "button",
}
`;
